修改欢迎页
对之前的欢迎页按钮代码进行修改

--- a/www/views/welcome/welcome.html
+++ b/www/views/welcome/welcome.html
@@ -11,13 +11,13 @@
         <img class="full-image" src="/views/welcome/img/splsh_three.png">
       </ion-slide>
     </ion-slide-box>
+    <div class="row padding-left padding-right" style="position: absolute;bottom: 10px;">
+      <div class="col padding-left padding-right">
+        <a class="button button-energized button-outline button-block" ui-sref="login">登陆</a>
+      </div>
+      <div class="col padding-left padding-right">
+        <a class="button button-energized button-block">注册</a>
+      </div>
+    </div>
   </ion-content>
-  <div class="=row padding-left padding-right" style="position: absolute;bottom: 10px;">
-    <div class="col padding-right">
-      <a class="button button-energized button-outline button-block" ui-sref="login">登陆</a>
-    </div>
-    <div class="col padding-right">
-      <a class="button button-energized button-block">注册</a>
-    </div>
-  </div>
 </ion-view>
