--- a/www/views/home/home.html
+++ b/www/views/home/home.html
@@ -1,5 +1,73 @@
 <ion-view title="首页">
   <ion-content>
-    我是首页
+    <img class="full-image image-title" src="/views/home/img/androidbanner.png">
+    <div class="row row-wrap row-no-padding">
+      <div class="col col-25 col-border quick-action-item">
+        <a class="tab-item shortcut" href="">
+          <i class="icon ion-android-apps energized"></i>
+          <h5>新增商品</h5>
+        </a>
+      </div>
+      <div class="col col-25 col-border quick-action-item">
+        <a class="tab-item shortcut" href="">
+          <i class="icon ion-android-apps energized"></i>
+          <h5>收银记账</h5>
+        </a>
+      </div>
+      <div class="col col-25 col-border quick-action-item">
+        <a class="tab-item shortcut" href="">
+          <i class="icon ion-android-apps energized"></i>
+          <h5>新增会员</h5>
+        </a>
+      </div>
+      <div class="col col-25 col-border quick-action-item">
+        <a class="tab-item shortcut" href="">
+          <i class="icon ion-android-apps energized"></i>
+          <h5>支出管理</h5>
+        </a>
+      </div>
+      <div class="col col-25 col-border quick-action-item">
+        <a class="tab-item shortcut" href="">
+          <i class="icon ion-android-apps energized"></i>
+          <h5>商品管理</h5>
+        </a>
+      </div>
+      <div class="col col-25 col-border quick-action-item">
+        <a class="tab-item shortcut" href="">
+          <i class="icon ion-android-apps energized"></i>
+          <h5>查询销售</h5>
+        </a>
+      </div>
+      <div class="col col-25 col-border quick-action-item">
+        <a class="tab-item shortcut" href="">
+          <i class="icon ion-android-apps energized"></i>
+          <h5>会员管理</h5>
+        </a>
+      </div>
+      <div class="col col-25 col-border quick-action-item">
+        <a class="tab-item shortcut" href="">
+          <i class="icon ion-android-apps energized"></i>
+          <h5>智能分析</h5>
+        </a>
+      </div>
+      <div class="col col-25 col-border quick-action-item">
+        <a class="tab-item shortcut" href="">
+          <i class="icon ion-android-apps energized"></i>
+          <h5>供应商管理</h5>
+        </a>
+      </div>
+      <div class="col col-25 col-border quick-action-item">
+        <a class="tab-item shortcut" href="">
+          <i class="icon ion-android-apps energized"></i>
+          <h5>挂单</h5>
+        </a>
+      </div>
+      <div class="col col-25 col-border quick-action-item">
+        <a class="tab-item shortcut" href="">
+          <i class="icon ion-android-apps energized"></i>
+          <h5>高级功能</h5>
+        </a>
+      </div>
+      </div>
   </ion-content>
 </ion-view>
