--- a/www/views/menu/menu.html
+++ b/www/views/menu/menu.html
@@ -1,6 +1,6 @@
 <ion-side-menus enable-menu-with-back-views="false">
   <ion-side-menu-content>
-    <ion-nav-bar class="bar-stable">
+    <ion-nav-bar class="bar-energized">
       <ion-nav-back-button>
       </ion-nav-back-button>
 
@@ -13,10 +13,19 @@
   </ion-side-menu-content>
 
   <ion-side-menu side="left">
-    <ion-header-bar class="bar-stable">
+    <!--<ion-header-bar class="bar-stable">
       <h1 class="title">Left</h1>
-    </ion-header-bar>
-    <ion-content>
+    </ion-header-bar>-->
+    <ion-content class="side-background">
+      <div class="row">
+        <div class="col col-66">
+          <h4 class="light">李帆</h4>
+          <h6 class="stable">18666666666</h6>
+        </div>
+        <div class="col col-34 col-center text-right">
+          <span class="energized-bg light">&nbsp;高级版&nbsp;</span>
+        </div>
+      </div>
       <ion-list>
         <ion-item menu-close ng-click="login()">
           Login
