--- a/www/views/home/home.html
+++ b/www/views/home/home.html
@@ -70,4 +70,7 @@
       </div>
       </div>
   </ion-content>
+  <div class="bar bar-footer" style="background-image: none;">
+    <h1 class="title">©2010-2016 生意专家</h1>
+  </div>
 </ion-view>
