--- a/www/views/home/home.html
+++ b/www/views/home/home.html
@@ -1,6 +1,23 @@
 <ion-view title="首页">
   <ion-content>
     <img class="full-image image-title" src="/views/home/img/androidbanner.png">
+    <div class="row stable-bg">
+      <div class="col col-33">
+        <h6>今日报表</h6>
+        <p>256.14</p>
+        <p>昨日：256.14<i class="icon ion-arrow-right-a balanced"></i></p>
+      </div>
+      <div class="col col-33">
+        <h6>本周周报表</h6>
+        <p>256.14</p>
+        <p>同期：525.78<i class="icon ion-arrow-down-a dark"></i></p>
+      </div>
+      <div class="col col-33">
+        <h6>本月报表</h6>
+        <p>256.14</p>
+        <p>同期：125.78<i class="icon ion-arrow-up-a assertive"></i></p>
+      </div>
+    </div>
     <div class="row row-wrap row-no-padding">
       <div class="col col-25 col-border quick-action-item">
         <a class="tab-item shortcut" href="">
