--- a/www/views/menu/menu.html
+++ b/www/views/menu/menu.html
@@ -3,7 +3,6 @@
     <ion-nav-bar class="bar-energized">
       <ion-nav-back-button>
       </ion-nav-back-button>
-
       <ion-nav-buttons side="left">
         <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
         </button>
@@ -11,16 +10,15 @@
     </ion-nav-bar>
     <ion-nav-view name="menuContent"></ion-nav-view>
   </ion-side-menu-content>
-
   <ion-side-menu side="left">
     <!--<ion-header-bar class="bar-stable">
       <h1 class="title">Left</h1>
     </ion-header-bar>-->
-    <ion-content class="side-background">
+    <ion-content class="side-background" style="background-color:rgb(78,78,78);">
       <div class="row">
         <div class="col col-66">
           <h4 class="light">李帆</h4>
-          <h6 class="stable">18666666666</h6>
+          <h6 class="stable">18650715138</h6>
         </div>
         <div class="col col-34 col-center text-right">
           <span class="energized-bg light">&nbsp;高级版&nbsp;</span>
@@ -41,5 +39,10 @@
         </ion-item>
       </ion-list>
     </ion-content>
+    <div class="bar bar-footer bar-dark">
+      <a class="button button-clear icon-left ion-ios-settings light" style="margin-top:-12px;" menu-close>
+        &nbsp;&nbsp;设置
+      </a>
+    </div>
   </ion-side-menu>
 </ion-side-menus>
