--- a/www/views/menu/menu.html
+++ b/www/views/menu/menu.html
@@ -51,10 +51,15 @@
         </li>
       </ul>
     </ion-content>
-    <div class="bar bar-footer bar-dark">
-      <a class="button button-clear icon-left ion-ios-settings light" style="margin-top:-12px;" menu-close>
+    <!--<div class="bar bar-footer bar-dark">
+      <a class="button button-clear icon-left ion-ios-settings light" style="margin-top:-123px;" menu-close>
         &nbsp;&nbsp;设置
       </a>
-    </div>
+    </div>-->
+    <ion-footer-bar class="bar-dark" style="background-color:rgb(78,78,78);">
+      <a class="button button-clear button-light" style="margin-top: -12px;" menu-close="">
+        <i class="icon ion-ios-settings light"></i>&nbsp;&nbsp;设置
+      </a>
+    </ion-footer-bar>
   </ion-side-menu>
 </ion-side-menus>
