--- a/www/views/home/home.html
+++ b/www/views/home/home.html
@@ -1,4 +1,7 @@
 <ion-view title="首页">
+  <ion-nav-buttons side="right">
+
+  </ion-nav-buttons>
   <ion-content>
     <img class="full-image image-title" src="/views/home/img/androidbanner.png">
     <div class="row stable-bg">
