--- a/www/views/category-list/category-list.html
+++ b/www/views/category-list/category-list.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+<ion-view view-title="商品类别">
+  <ion-nav-buttons side="right">
+    <a class="button button-clear button-icon ion-ios-plus-empty" href=""></a>
+  </ion-nav-buttons>
+  <ion-content class="stable-bg category"
+</ion-view>
