--- a/www/views/home/home.html
+++ b/www/views/home/home.html
@@ -1,6 +1,6 @@
 <ion-view title="首页">
   <ion-nav-buttons side="right">
-
+    <a class="button button-icon button-clear ion-ios-plus-empty" href="#/app/category-list"></a>
   </ion-nav-buttons>
   <ion-content>
     <img class="full-image image-title" src="/views/home/img/androidbanner.png">
