商品类别，新增小分类

--- a/www/views/category/category-list.html
+++ b/www/views/category/category-list.html
@@ -1,6 +1,6 @@
 <ion-view view-title="商品类别">
   <ion-nav-buttons side="right">
-    <a class="button button-clear button-icon ion-ios-plus-empty" href=""></a>
+    <a class="button button-clear button-icon ion-ios-plus-empty" href="#/app/category-add/0/"></a>
   </ion-nav-buttons>
   <ion-content style="width: 40%" class="stable-bg">
     <ul class="list">
@@ -18,10 +18,11 @@
         {{subCategory.Name}}
       </li>
     </ul>
-    <button class="button button-positive button-clear icon-left ion-plus-circled margin-left">新增小分类</button>
+    <button class="button button-positive button-clear icon-left ion-plus-circled margin-left" ng-click="gotoAddCategory()">新增小分类</button>
   </ion-content>
   <div class="bar bar-footer row-center" style="margin-left: 40%;width: 60%;">
+    <span ng-if="activeCategory.Children.length==0">目前没有小分类</span>
     <span ng-if="activeCategory.Children.length>0">共{{activeCategory.Children.length}}种商品分类</span>
-    <button class="button button-icon stable-border button-small ion-android-more-horizontal pull-right"></button>
+    <button class="button button-icon stable-border button-small ion-android-more-horizontal pull-right"ng-click="showActionSheet()"></button>
   </div>
 </ion-view>
