--- a/www/views/menu/menu.html
+++ b/www/views/menu/menu.html
@@ -57,8 +57,8 @@
       </a>
     </div>-->
     <ion-footer-bar class="bar-dark" style="background-color:rgb(78,78,78);">
-      <a class="button button-clear button-light" style="margin-top: -12px;" menu-close="">
-        <i class="icon ion-ios-settings light"></i>&nbsp;&nbsp;设置
+      <a class="button button-clear button-light" style="margin-top: -12px;" menu-close ui-sref="app.setting">
+        <i class="icon icon ion-ios-gear-outline light"></i>&nbsp;&nbsp;设置
       </a>
     </ion-footer-bar>
   </ion-side-menu>
