新增商品的实现

--- a/www/views/home/home.html
+++ b/www/views/home/home.html
@@ -22,7 +22,7 @@
       </div>
     </div>
     <div class="row row-wrap row-no-padding">
-      <div class="col col-25 col-border quick-action-item">
+      <div class="col col-25 col-border quick-action-item" ui-sref="app.product-add">
         <a class="tab-item shortcut" href="">
           <i class="icon ion-ios-folder energized"></i>
           <h5>新增商品</h5>
