新增商品的实现

--- a/www/views/category/category-list.html
+++ b/www/views/category/category-list.html
@@ -14,7 +14,7 @@
   <ion-content class="light-bg" style="margin-left: 40%;width: 60%;">
     <ul class="list">
       <li class="item">小类别</li>
-      <li class="item" ng-repeat="subCategory in activeCategory.Children" ng-click="selectCategory(subCategory)">
+      <li class="item" ng-repeat="subCategory in activeCategory.Children" ng-click="selectSubCategory(subCategory)">
         {{subCategory.Name}}
       </li>
     </ul>
