--- a/www/views/home/home.html
+++ b/www/views/home/home.html
@@ -46,7 +46,7 @@
           <h5>支出管理</h5>
         </a>
       </div>
-      <div class="col col-25 col-border quick-action-item">
+      <div class="col col-25 col-border quick-action-item" ui-sref="app.product-list">
         <a class="tab-item shortcut" href="">
           <i class="icon ion-ios-browsers energized"></i>
           <h5>商品管理</h5>
