自定义指令，客户端验证

--- a/www/views/account/login.html
+++ b/www/views/account/login.html
@@ -8,7 +8,7 @@
       </label>
       <label class="item item-input" for="" style="margin-top: 20px;">
         <span class="input-label">密码</span>
-        <input type="text" placeholder="登录密码" ng-model="user.password">
+        <input type="password" placeholder="登录密码" ng-model="user.password">
       </label>
     </div>
     <div class="row padding">
