--- a/www/views/product/product-add.html
+++ b/www/views/product/product-add.html
@@ -23,7 +23,7 @@
         <i class="icon ion-chevron-right icon-accessory"></i>
       </div>
     </div>
-      <div class="list">
+      <div class="list" expander-directive>
         <label class="item item-input" for="">
           <span class="input-label">售价<span class="energized">*</span></span>
           <input type="text" placeholder="输入商品售价">
