--- a/www/views/account/change-password.html
+++ b/www/views/account/change-password.html
@@ -1,21 +1,28 @@
 <ion-view view-title="修改密码">
-  <ion-content>
-    <div class="list list-inset stable-bg">
-      <span class="input-label">请输入旧密码</span>
-      <label for="" class="item item-input">
-        <input type="text" ng-model="user.oldPassword">
-      </label>
-      <span class="input-label">请输入新密码</span>
-      <label for="" class="item item-input">
-        <input type="text" ng-model="user.password">
-      </label>
-      <span class="input-label">请再输入新密码</span>
-      <label for="" class="item item-input">
-        <input type="text" ng-model="user.confirmPassword">
-      </label>
+  <form name="changePasswordForm" novalidate>
+    <ion-content>
+      <div class="list list-inset stable-bg">
+        <span class="input-label">请输入旧密码</span>
+        <label for="" class="item item-input">
+          <input name="oldPassword" type="text" ng-model="user.oldPassword" required>
+        </label>
+        <span class="input-label">请输入新密码</span>
+        <label for="" class="item item-input">
+          <input name="password" type="password" required ng-model="user.password" ng-minlength="6" ng-maxlength="16">
+        </label>
+        <span class="input-label">请再输入新密码</span>
+        <label for="" class="item item-input">
+          <input name="confirmPassword" type="password" ng-model="user.confirmPassword">
+        </label>
+      </div>
+      <div class="padding">
+        <button type="submit" class="button button-energized button-block">提交</button>
+      </div>
+    </ion-content>
+    <div class="toast-container active"
+        ng-messages="changePasswordForm.password.$error" ng-if="changePasswordForm.password.$touched||changePasswordForm.$submitted">
+      <p class="toast-message" ng-message="required">新密码必填</p>
+      <p ng-message="minlength||maxlength">新密码6位至16位</p>
     </div>
-    <div class="padding">
-      <button class="button button-energized button-block">提交</button>
-    </div>
-  </ion-content>
+  </form>
 </ion-view>
