客户端验证

--- a/www/views/home/home.html
+++ b/www/views/home/home.html
@@ -90,7 +90,8 @@
       </div>
       </div>
   </ion-content>
-  <div class="bar bar-footer" style="background-image: none;">
+  <company-directive bottom="5px"></company-directive>
+  <!--<div class="bar bar-footer" style="background-image: none;">
     <h1 class="title">©2010-2016 生意专家</h1>
-  </div>
+  </div>-->
 </ion-view>
