--- a/www/views/account/change-password.html
+++ b/www/views/account/change-password.html
@@ -1,5 +1,5 @@
 <ion-view view-title="修改密码">
-  <form name="changePasswordForm" novalidate>
+  <form name="changePasswordForm" novalidate ng-submit="save()">
     <ion-content>
       <div class="list list-inset stable-bg">
         <span class="input-label">请输入旧密码</span>
@@ -12,7 +12,7 @@
         </label>
         <span class="input-label">请再输入新密码</span>
         <label for="" class="item item-input">
-          <input name="confirmPassword" type="password" ng-model="user.confirmPassword">
+          <input name="confirmPassword" type="password" required ng-model="user.confirmPassword" equalto="user.password">
         </label>
       </div>
       <div class="padding">
@@ -20,9 +20,18 @@
       </div>
     </ion-content>
     <div class="toast-container active"
-        ng-messages="changePasswordForm.password.$error" ng-if="changePasswordForm.password.$touched||changePasswordForm.$submitted">
+         ng-messages="changePasswordForm.oldPassword.$error" ng-if="changePasswordForm.oldPassword.$touched||changePasswordForm.$submitted">
+      <p class="toast-message" ng-message="required">旧密码必填</p>
+    </div>
+    <div class="toast-container active"
+         ng-messages="changePasswordForm.password.$error" ng-if="changePasswordForm.password.$touched||changePasswordForm.$submitted">
       <p class="toast-message" ng-message="required">新密码必填</p>
-      <p ng-message="minlength||maxlength">新密码6位至16位</p>
+      <p class="toast-message" ng-message="minlength,maxlength">新密码6位至16位</p>
+    </div>
+    <div class="toast-container active"
+         ng-messages="changePasswordForm.confirmPassword.$error" ng-if="(changePasswordForm.confirmPassword.$touched||changePasswordForm.$submitted)&&user.password!=user.confirmPassword">
+      <p class="toast-message" ng-message="required">确认密码必填</p>
+      <p class="toast-message" ng-message="equalto">密码不一致</p>
     </div>
   </form>
 </ion-view>
